--- a/Src/UI/login.html
+++ b/Src/UI/login.html
@@ -53,7 +53,7 @@
 						</label>
 					</div>
 					<div class="float-right">
-						<button type="button" onclick="App.login()" class="button">
+						<button type="button" onclick="App.validationAndLogin()" class="button">
 							Login
 						</button>
 					</div>
