--- a/Src/UI/login.html
+++ b/Src/UI/login.html
@@ -25,7 +25,45 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 	<script src="scripts/smartvalidation.js"></script>
 	<script src="scripts/app.js"></script>
-      <script src="scripts/Smart.js"></script>
+    <script src="scripts/Smart.js"></script>
+      <style>
+          #loader {
+              position: absolute;
+              left: 50%;
+              top: 50%;
+              z-index: 1;
+              width: 150px;
+              height: 150px;
+              margin: -75px 0 0 -75px;
+              border: 16px solid #f3f3f3;
+              border-radius: 50%;
+              border-top: 16px solid #3498db;
+              width: 120px;
+              height: 120px;
+              -webkit-animation: spin 2s linear infinite;
+              animation: spin 2s linear infinite;
+          }
+
+          @-webkit-keyframes spin {
+              0% {
+                  -webkit-transform: rotate(0deg);
+              }
+
+              100% {
+                  -webkit-transform: rotate(360deg);
+              }
+          }
+
+          @keyframes spin {
+              0% {
+                  transform: rotate(0deg);
+              }
+
+              100% {
+                  transform: rotate(360deg);
+              }
+          }
+      </style>
   </head>
   <!-- add side_menu_hide and aside_close class to hide side bars -->
   <body class="p-0 login_bg">
@@ -49,13 +87,14 @@
 						<label class="label" for="password">Password</label>
 						<label class="input">
 							<i class="icon-prepend form-icon-lock"></i>
-							<input type="text" name="password" id="password">
+							<input type="password" name="password" id="password">
 						</label>
 					</div>
 					<div class="float-right">
 						<button type="button" onclick="App.validationAndLogin()" class="button">
 							Login
 						</button>
+                        <div id="loader" style="display:none"></div>
 					</div>
 				</div>
 			</div>
